--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "组件库文档",
-  "author": "w4ng3",
+  "author": "ysdf",
   "license": "ISC",
   "keywords": [],
   "main": "index.js",
