--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "husky": "^9.1.6",
     "terser": "^5.34.1",
     "tsx": "^4.19.1",
-    "unocss": "catalog:"
+    "unocss": "catalog:",
+    "vitest": "^2.1.3"
   },
   "config": {
     "commitizen": {
