--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -19,10 +19,10 @@ jobs:
         with:
           version: 9.8.0
       - name: Install modules
-        run: pnpm install
+        run: pnpm install --no-frozen-lockfile
 
-      - name: Run tests
-        run: npx vitest run --coverage
+      # - name: Run tests
+      #   run: npx vitest run --coverage
 
       - name: Upload results to Codecov
         uses: codecov/codecov-action@v4
