--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "misaka-ui-monorepo",
+  "name": "misaka-ui",
   "type": "module",
   "private": true,
   "packageManager": "pnpm@9.11.0",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "prepare": "husky",
-    "lint": "eslint \"./packages/**/*.{vue,ts,tsx,js,mjs,cjs}\"",
-    "lint:fix": "eslint \"./packages/**/*.{vue,ts,tsx,js,mjs,cjs}\" --fix",
+    "lint": "eslint \"./packages/**/{src,test}/**/*.{vue,ts,tsx,js,mjs,cjs}\"",
+    "lint:fix": "eslint \"./packages/**/{src,test}/**/*.{vue,ts,tsx,js,mjs,cjs}\" --fix",
     "test": "pnpm --dir ./packages/ui test",
     "test:coverage": "pnpm --dir ./packages/ui test:coverage",
     "dev": "pnpm --dir ./packages/ui dev",
@@ -25,17 +25,16 @@
     "@iconify-json/ic": "^1.2.0",
     "@types/node": "^22.7.4",
     "@unocss/eslint-plugin": "^0.62.4",
+    "@vitest/coverage-v8": "2.1.2",
     "cz-customizable": "^7.2.1",
     "eslint": "^9.11.1",
     "eslint-plugin-format": "^0.1.2",
-    "eslint-plugin-jest": "^28.9.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "husky": "^9.1.6",
     "terser": "^5.34.1",
     "tsx": "^4.19.1",
-    "unocss": "catalog:",
-    "vitest": "^2.1.3"
+    "unocss": "catalog:"
   },
   "config": {
     "commitizen": {
